:bug: fixed footer next-prev alignment bug

--- a/website/_css/layout/_footer.css
+++ b/website/_css/layout/_footer.css
@@ -43,11 +43,7 @@ footer li:last-child::after {
     content: none;
 }
 
-@media all and (min-width: 360px) {
-    address ul {
-       /* float: right;*/
-    }
-
+@media all and (min-width: 640px) {
     .next-prev ul{
         text-align: center;
     }
